--- a/edu/src/Sections/Navbar/styles.scss
+++ b/edu/src/Sections/Navbar/styles.scss
@@ -1,51 +1,51 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
-*{
-    font-family: "Raleway", sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
+* {
+  font-family: "Raleway", sans-serif;
 }
-.navbar__container{
-    background-color: #081f51;
-    height: 75px;
-    padding: 0px 20px;
-}
-
-.nav__container{
-    width: 80%;
-    height: 100%;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
+.navbar__container {
+  background-color: #081f51;
+  height: 75px;
+  padding: 0px 20px;
 }
 
-.navigation{
-    width: 100%;
-    display: flex;
-    height: 100%;
-    justify-content: space-between;
-    align-items: center;
-    color:#fff;
+.nav__container {
+  width: 80%;
+  height: 100%;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  img {
+    padding-right: 50px;
+  }
 }
 
-.nav__link{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 18px;
-    span{
+.navigation {
+  width: 100%;
+  display: flex;
+  height: 100%;
+  justify-content: space-between;
+  align-items: center;
+  color: #fff;
+}
+
+.nav__link {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+  span {
     cursor: pointer;
-
-    }
-    button{
-        background-color: #fff;
-        color:#081f51;
-        width: 100px;
-        height: 30px;
+  }
+  button {
+    background-color: #fff;
+    color: #081f51;
+    width: 100px;
+    height: 30px;
     font-size: 15px;
     padding: 2px 15px;
-    border:none;
+    border: none;
     border-radius: 40px;
     cursor: pointer;
-
-
-    }
+  }
 }
