--- a/edu/src/Sections/Header/styles.scss
+++ b/edu/src/Sections/Header/styles.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800;900&family=Roboto&&display=swap');
 .header__container {
   padding: 150px 15px;
   display: flex;
@@ -8,16 +8,33 @@
 .header__phrase{
     width: 660px;
     padding-left: 150px;
+    button{
+        width: 215px;
+        height: 60px;
+        background-color: #0071DC;
+        border:none;
+        color:#fff;
+        font-size: 16px;
+        text-transform: uppercase;
+        font-family: "Ralway", sans-serif;
+        font-weight: 600;
+    }
 }
 
 .heading{
     color:#0071DC;
     font-size: 20px;
-    font-weight: bold;
+    font-weight: 600;
 }
 .subtitle{
     font-size: 80px;
     color:#081F51;
-    font-weight: bold;
+    font-weight: 700;
     margin:0;
+}
+
+.header__text{
+    color: #354C68;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
 }
