--- a/edu/src/Sections/Navbar/styles.scss
+++ b/edu/src/Sections/Navbar/styles.scss
@@ -6,6 +6,8 @@
   background-color: #081f51;
   height: 75px;
   padding: 0px 20px;
+  position: fixed;
+  min-width: 100vw;
 }
 
 .nav__container {
@@ -15,7 +17,7 @@
   display: flex;
   align-items: center;
   img {
-    padding-right: 50px;
+    padding-right: 80px;
   }
 }
 
@@ -34,6 +36,7 @@
   justify-content: center;
   align-items: center;
   font-size: 18px;
+  height: 100%;
   span {
     cursor: pointer;
   }
