--- a/edu/src/Sections/Header/styles.scss
+++ b/edu/src/Sections/Header/styles.scss
@@ -3,7 +3,7 @@
   padding-top: 150px;
   display: flex;
   background-color: #f1f1f1;
-  max-height: 65vh;
+  min-height: 65vh;
   overflow: hidden;
   width: 100%;
   display: flex;
@@ -25,6 +25,7 @@
     text-transform: uppercase;
     font-family: "Ralway", sans-serif;
     font-weight: 600;
+    cursor: pointer;
   }
 }
 
@@ -48,14 +49,16 @@
 
 .header__img {
   padding-top: 50px;
-  padding-left:10px;
-  padding-right:10px;
-
+  padding-left: 10px;
+  padding-right: 10px;
+  img {
+    background-color: #0071dc;
+  }
 }
 .header__carousel {
   padding: 0 15px;
   padding-left: 50px;
-  max-height: 100%;
+  height: 600px;
   overflow: hidden;
   width: 250px;
   display: flex;
