--- a/edu/src/Sections/Header/styles.scss
+++ b/edu/src/Sections/Header/styles.scss
@@ -72,7 +72,7 @@
   width: 100%;
   align-items: flex-end;
   gap: 15px;
-  animation: slide 13s linear infinite;
+  animation: slide 30s linear infinite;
   img {
     max-width: 250px;
     max-height: 450px;
@@ -84,6 +84,6 @@
     transform: translate3d(0, 0, 0);
   }
   100% {
-    transform: translate3d(0, 1500px, 0); /* The image width */
+    transform: translate3d(0, 1500px, 0);
   }
 }
