--- a/edu/src/Sections/OurCourses/styles.scss
+++ b/edu/src/Sections/OurCourses/styles.scss
@@ -1,29 +1,51 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800;900&family=Roboto&&display=swap");
-.our__courses__section{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    min-height: 100vh;
-    font-family: "Raleway", sans-serif;
-    padding:100px 30%;
+.our__courses__section {
+  display: flex;
+  flex-direction: column;
+  // align-items: center;
+  min-height: 100vh;
+  font-family: "Raleway", sans-serif;
+  padding: 100px 5%;
 }
-.courses__title{
-    color:#0071dc; 
-    font-family: "Raleway", sans-serif;
-    font-weight: 600;
-    font-size: 18px;
+.courses__title {
+  color: #0071dc;
+  font-family: "Raleway", sans-serif;
+  font-weight: 600;
+  font-size: 18px;
+  margin: 0 auto;
 }
-.courses__subtitle{
-    font-family: "Raleway", sans-serif;
-    font-weight: 700;
-    font-size: 50px;
-    color:#081F51;
-    padding-top: 15px;
-    padding-bottom: 50px;
+.courses__subtitle {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 50px;
+  color: #081f51;
+  padding-top: 25px;
+  padding-bottom: 50px;
+  margin: 0 auto;
 }
 
-.courses__categories{
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
+.courses__categories {
+  display: flex;
+  justify-content: space-between;
+  width: 70%;
+  margin: 0 auto;
+  padding: 10px 40px;
+
+  span {
+    color: #354c68;
+    font-weight: 700;
+    padding: 0 30px;
+  }
+  border-bottom: solid rgba(0, 0, 0, 0.2) 1px;
+}
+
+.courses {
+  display: grid;
+  gap: 30px;
+  padding-top: 30px;
+  // margin-left: -70px;
+  // margin-right: 1000px;
+
+  grid-template-columns: repeat(3,370px);
+  justify-content: center;
 }
