--- a/edu/src/Sections/OurCourses/styles.scss
+++ b/edu/src/Sections/OurCourses/styles.scss
@@ -5,7 +5,7 @@
   // align-items: center;
   min-height: 100vh;
   font-family: "Raleway", sans-serif;
-  padding: 100px 5%;
+  // padding: 100px 5%;
 }
 .courses__title {
   color: #0071dc;
@@ -13,6 +13,7 @@
   font-weight: 600;
   font-size: 18px;
   margin: 0 auto;
+  padding-top: 80px;
 }
 .courses__subtitle {
   font-family: "Raleway", sans-serif;
