--- a/edu/src/Sections/Header/styles.scss
+++ b/edu/src/Sections/Header/styles.scss
@@ -2,91 +2,93 @@
 .header__container {
   padding-top: 150px;
   display: flex;
-  background-color: #f1f1f1;
+  background-color: white;
   min-height: 65vh;
   overflow: hidden;
   width: 100%;
   display: flex;
   //   justify-content: center;
-}
-.header__phrase {
-  width: 660px;
-  padding-right: 15px;
-  padding-left: 150px;
-  padding-top: 50px;
-  button {
-    padding: 0 20px;
-    width: 215px;
-    height: 60px;
-    background-color: #0071dc;
-    border: none;
-    color: #fff;
-    font-size: 16px;
-    text-transform: uppercase;
-    font-family: "Ralway", sans-serif;
+  .header__phrase {
+    width: 660px;
+    padding-right: 15px;
+    padding-left: 80px;
+    padding-top: 50px;
+    .button {
+      padding: 0 20px;
+      width: 215px;
+      height: 60px;
+      background-color: #11D4FB;
+      border: none;
+      color: #fff;
+      font-size: 16px;
+      text-transform: uppercase;
+      font-family: "Ralway", sans-serif;
+      font-weight: 600;
+      cursor: pointer;
+    }
+    .button:hover{
+      background-color: #081f51;
+    }
+  }
+
+  .heading {
+    color: #11D4FB;
+    font-size: 20px;
     font-weight: 600;
-    cursor: pointer;
+  }
+  .subtitle {
+    font-size: 50px;
+    color: #081f51;
+    font-weight: 700;
+    margin: 0;
+  }
+
+  .header__text {
+    color: #354c68;
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+  }
+
+  .header_img {
+    padding-top: 50px;
+    padding-left: 10px;
+    width: 400px;
+    object-fit: cover;
+    height: 400px;
+  }
+  .header__carousel {
+    padding: 0 15px;
+    padding-left: 50px;
+    height: 600px;
+    overflow: hidden;
+    width: 250px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    overflow: hidden;
+  }
+
+  .carousel {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: flex-end;
+    height: 900px;
+    gap: 15px;
+    transition: opacity 0.5s ease-out;
+    animation: slide 10s linear infinite;
+    img {
+      width: 220px;
+      height: 450px;
+      object-fit: cover;
+
+    }
   }
 }
 
-.heading {
-  color: #0071dc;
-  font-size: 20px;
-  font-weight: 600;
-}
-.subtitle {
-  font-size: 80px;
-  color: #081f51;
-  font-weight: 700;
-  margin: 0;
-}
-
-.header__text {
-  color: #354c68;
-  font-family: "Roboto", sans-serif;
-  font-weight: 300;
-}
-
-.header__img {
-  padding-top: 50px;
-  padding-left: 10px;
-  padding-right: 10px;
-  img {
-    background-color: #0071dc;
-  }
-}
-.header__carousel {
-  padding: 0 15px;
-  padding-left: 50px;
-  height: 600px;
-  overflow: hidden;
-  width: 250px;
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
-  overflow: hidden;
-}
-
-.carousel {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  align-items: flex-end;
-  height: 900px;
-
-  gap: 15px;
-  animation: slide 30s linear infinite;
-  img {
-    max-width: 250px;
-    max-height: 450px;
-  }
-}
 
 @keyframes slide {
-  0% {
-    transform: translate3d(0, 0, 0);
-  }
-  100% {
-    transform: translate3d(0, -1500px, 0);
+  100% { 
+    transform: translateY(-50.6666%);  
   }
 }
