--- a/edu/src/Sections/Navbar/styles.scss
+++ b/edu/src/Sections/Navbar/styles.scss
@@ -3,53 +3,65 @@
   font-family: "Raleway", sans-serif;
 }
 .navbar__container {
-  background-color: #081f51;
-  height: 75px;
+  background-color: #11D4FB;
+  height: 90px;
   padding: 0px 20px;
   position: fixed;
   min-width: 100vw;
   z-index: 2;
-}
-
-.nav__container {
-  width: 80%;
-  height: 100%;
-  margin: 0 auto;
-  display: flex;
-  align-items: center;
-  img {
-    padding-right: 80px;
+  .logo {
+    margin-left: 80px;
   }
-}
-
-.navigation {
-  width: 100%;
-  display: flex;
-  height: 100%;
-  justify-content: space-between;
-  align-items: center;
-  color: #fff;
-}
-
-.nav__link {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 18px;
-  height: 100%;
-  span {
-    cursor: pointer;
+  .nav__container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+   
   }
-  button {
-    background-color: #fff;
-    color: #081f51;
-    width: 100px;
-    height: 30px;
-    font-size: 15px;
-    padding: 2px 15px;
-    border: none;
-    border-radius: 40px;
-    cursor: pointer;
+
+  .navigation {
+    width: 100%;
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: flex-end;
+    color: #fff;
+  }
+
+  .nav__link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 18px;
+    height: 100%;
+    margin: 0 40px;
+    span {
+      cursor: pointer;
+    }
+    button {
+      background-color: #fff;
+      color: #081f51;
+      width: 100px;
+      height: 30px;
+      font-size: 15px;
+      padding: 2px 15px;
+      border: none;
+      border-radius: 40px;
+      cursor: pointer;
+    }
+    input{
+      width: 400px;
+      height: 30px;
+      border-radius: 10px;
+      border: none;
+      background-image: url(../../assets/images/searchIcon.png);
+      background-repeat: no-repeat;
+      background-position-x: 97%;
+      background-size: 15px;
+      background-position-y: center;
+      padding: 0 20px;
+    }
   }
 }
