--- a/edu/src/Components/Category/styles.scss
+++ b/edu/src/Components/Category/styles.scss
@@ -1,7 +1,8 @@
 .category_card{
-    width: 120px;
+    width: 130px;
     height: 60px;
-    background-color: #dfdfdf;
+    padding: 0px 5px;
+    background-color: #dedede;
     border-radius: 40px;
     display: flex;
     justify-content: center;
@@ -9,4 +10,9 @@
     font-weight: 600;
     margin: 5px;
     cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+
+    .category__name{
+        text-align: center;
+    }
 }
