--- a/edu/src/Sections/Promo/styles.scss
+++ b/edu/src/Sections/Promo/styles.scss
@@ -23,5 +23,26 @@
     h1 {
       color: #081f51;
     }
+    .features {
+      display: flex;
+      flex-wrap: wrap;
+      .feature {
+        display: flex;
+        align-items: center;
+        min-width: 50%;
+        max-width: 50%;
+        padding: 10px 0;
+
+        img {
+          width: 40px;
+        }
+        span {
+          color: #081f51;
+          font-weight: 600;
+          font-size: 18px;
+          padding: 0 20px;
+        }
+      }
+    }
   }
 }
