started where to learn section

--- a/edu/src/Sections/Promo/styles.scss
+++ b/edu/src/Sections/Promo/styles.scss
@@ -49,7 +49,8 @@
     margin-top: 40px;
     display: flex;
     gap: 20px;
-    .google,.apple {
+    .google,
+    .apple {
       width: 150px;
       height: 60px;
       background-color: rgb(255, 255, 255);
