--- a/edu/src/Sections/WhereToLearn/styles.scss
+++ b/edu/src/Sections/WhereToLearn/styles.scss
@@ -34,10 +34,12 @@
     }
 .learn__contact{
     .btn{
-        width: 100px;
-        padding:10px 30px ;
+        width: 130px;
+        padding:16px 30px ;
+            text-align: center;
+            cursor: pointer;
         color:#fff;
-        background-color: rgb(47, 47, 230);
+        background-color: rgb(86, 86, 254);
     }
 }  
 }
