--- a/edu/src/Sections/OurCourses/styles.scss
+++ b/edu/src/Sections/OurCourses/styles.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   background-color: #f1f1f1;
+  padding-bottom: 100px;
   // align-items: center;
   min-height: 100vh;
   font-family: "Raleway", sans-serif;
