--- a/edu/src/Sections/Promo/styles.scss
+++ b/edu/src/Sections/Promo/styles.scss
@@ -4,17 +4,18 @@
   justify-content: center;
   padding: 100px 0;
   .promo_img {
-    width: 700px;
-    min-height: 670px;
+    width: 650px;
+    height: 600px;
     z-index: 1;
+    object-fit: cover;
   }
 
   .app__container {
-    width: 600px;
-    height: 470px;
+    width: 550px;
+    height: 400px;
     background-color: #f4f4f4;
     margin-top: 80px;
-    padding: 100px;
+    padding: 100px 50px;
     z-index: 2;
     margin-left: -270px;
     h3 {
