--- a/edu/src/Sections/WhereToLearn/styles.scss
+++ b/edu/src/Sections/WhereToLearn/styles.scss
@@ -1,59 +1,63 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
 
 .learn__container {
-    display: flex;
-    color:#081f51;
-    padding: 100px;
-    min-height: 100vh;
-    width: 100%;
-    .learn__images{
-        width: 40vw;
+  display: flex;
+  color: #081f51;
+  padding: 100px;
+  min-height: 100vh;
+  width: 100%;
+  .learn__images {
+    width: 40vw;
+  }
+  .learn__about {
+    max-width: 45vw;
+    .learn_img {
+      width: 50px;
+      height: 50px;
+      object-fit: contain;
     }
-    .learn__about {
-        max-width: 45vw;
-        .learn_img{
-            width: 50px;
-            height: 50px;
-            object-fit: contain;
-        }
-        width: 50%;
-        h3 {
-        color: #0071dc;
-        font-family: "Raleway", sans-serif;
-        font-weight: 600;
-        font-size: 18px;
-        margin: 0;
-        }
-        h1{
-            color:#081f51;
-            font-size: 45px;
-            font-family: "Raleway", sans-serif;
-
-        }
-        p{
-            font-family: "Raleway", sans-serif;
-            color: rgv(0,0,0,0.1);
-        }
-        .learn__features{
-            .learn_feature{
-                display: flex;
-                gap: 10px;
-                padding:10px 0 ;
-                .learn_text{
-                    width: 50%;
-                }
-            }
-        }
-        .learn__contact_btn{
-            width: 130px;
-            padding:16px 30px ;
-            font-size: 18px;
-            font-weight: 600;
-                text-align: center;
-                cursor: pointer;
-            color:#fff;
-            background-color: #11D4FB;
-
-        }
+    width: 50%;
+    h3 {
+      color: #0071dc;
+      font-family: "Raleway", sans-serif;
+      font-weight: 600;
+      font-size: 18px;
+      margin: 0;
     }
+    h1 {
+      color: #081f51;
+      font-size: 45px;
+      font-family: "Raleway", sans-serif;
+    }
+    p {
+      font-family: "Raleway", sans-serif;
+      color: rgv(0, 0, 0, 0.1);
+    }
+    .learn__features {
+      .learn_feature {
+        display: flex;
+        gap: 10px;
+        padding: 10px 0;
+        .learn_text {
+          width: 50%;
+        }
+      }
+    }
+    .learn__contact_btn {
+      width: 130px;
+      padding: 16px 30px;
+      font-size: 18px;
+      font-weight: 600;
+      text-align: center;
+      cursor: pointer;
+      color: #fff;
+      background-color: #11d4fb;
+      transition: all ease 0.3s;
+
+      &:hover {
+        background-color: #081f51;
+        transition: all ease 0.3s;
+      }
+    }
+  }
 }
