--- a/edu/src/Sections/Footer/Footer.styles.scss
+++ b/edu/src/Sections/Footer/Footer.styles.scss
@@ -23,7 +23,7 @@
   color: #081f51;
   display: flex;
   flex-direction: column;
-  padding: 140px 10vw 0;
+  padding: 140px 5vw 0;
 
   h1 {
     margin: 0px;
@@ -39,9 +39,11 @@
   align-self: center;
 }
 .Footer_Column {
+  padding: 0 20px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  //   justify-content: space-between;
+  gap: 30px;
   h1 {
     height: 25px;
   }
@@ -63,6 +65,7 @@ a:hover {
 }
 .Logos_Container {
   display: flex;
+  padding: 0 10px;
   flex-direction: column;
   .title {
     display: flex;
@@ -71,7 +74,7 @@ a:hover {
     font-size: 18px;
     font-family: "Raleway", sans-serif;
     margin-bottom: 20px;
-    h1 {
+    h2 {
       margin: 0;
     }
     .Footer_logo {
