--- a/edu/src/Sections/Footer/Footer.styles.scss
+++ b/edu/src/Sections/Footer/Footer.styles.scss
@@ -7,6 +7,41 @@
     cursor: pointer;
   }
   .ContactInfo {
+    .footer__socials {
+      display: grid;
+      //   justify-content: space-between;
+      grid-template-columns: repeat(3, 1fr);
+      grid-gap: 20px;
+      padding-top: 20px;
+      svg {
+        font-size: 20px;
+      }
+
+      a {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        background-color: #f1f1f1;
+        margin: 0 5px;
+        transition: all ease 0.2s;
+        &:hover {
+          background-color: #081f51;
+          transition: all ease 0.2s;
+          color: #fff;
+        }
+      }
+    }
+    .footer__col {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      color: #081f51;
+      font-size: 16px;
+      padding: 5px 0;
+    }
     display: flex;
     flex-direction: column;
     a {
@@ -42,7 +77,6 @@
   padding: 0 20px;
   display: flex;
   flex-direction: column;
-  //   justify-content: space-between;
   gap: 30px;
   h1 {
     height: 25px;
