--- a/edu/src/Sections/WhereToLearn/styles.scss
+++ b/edu/src/Sections/WhereToLearn/styles.scss
@@ -6,8 +6,31 @@
   padding: 100px;
   min-height: 100vh;
   width: 100%;
-  .learn__images {
-    width: 40vw;
+  .learn__images__container {
+    position: relative;
+    .learn__images {
+      position: absolute;
+      &:first-child {
+        width: 300px;
+        height: 400px;
+
+        // right: -100px;
+        left: 300px;
+      }
+      &:nth-child(2) {
+        width: 300px;
+        height: 500px;
+        left: 100px;
+        top: 15%;
+        z-index: 2;
+      }
+      &:nth-child(3) {
+        width: 450px;
+        left: 300px;
+        top: 420px;
+        z-index: 3;
+      }
+    }
   }
   .learn__about {
     max-width: 45vw;
