--- a/edu/src/Sections/WhereToLearn/styles.scss
+++ b/edu/src/Sections/WhereToLearn/styles.scss
@@ -18,10 +18,10 @@
         right: -500px;
       }
       &:nth-child(2) {
-        width: 350px;
+        width: 310px;
         height: 380px;
         // left: 60px;
-        right: -300px;
+        right: -280px;
         top: 180px;
         z-index: 2;
       }
@@ -86,5 +86,10 @@
         transition: all ease 0.3s;
       }
     }
+  }
+}
+
+@media screen and (max-width: 1340px) {
+  .learn__images {
   }
 }
