--- a/edu/src/Sections/WhereToLearn/styles.scss
+++ b/edu/src/Sections/WhereToLearn/styles.scss
@@ -3,6 +3,7 @@
 .learn__container {
   display: flex;
   color: #081f51;
+  align-items: center;
   min-height: 100vh;
   width: 100%;
   max-width: 100vw;
@@ -13,23 +14,24 @@
       position: absolute;
       &:first-child {
         width: 300px;
-        height: 400px;
+        height: 300px;
         // left: 300px;
         right: -500px;
+        top: -270px
       }
       &:nth-child(2) {
         width: 310px;
-        height: 380px;
+        height: 300px;
         // left: 60px;
         right: -280px;
-        top: 180px;
+        top: -100px;
         z-index: 2;
       }
       &:nth-child(3) {
         width: 480px;
         // left: 220px;
         right: -550px;
-        top: 430px;
+        top:70px;
         z-index: 3;
       }
     }
@@ -66,7 +68,7 @@
         gap: 10px;
         padding: 10px 0;
         .learn_text {
-          width: 50%;
+          width: 70%;
         }
       }
     }
