--- a/edu/src/Sections/Navbar/styles.scss
+++ b/edu/src/Sections/Navbar/styles.scss
@@ -4,10 +4,10 @@
 }
 
 .navbar__container {
-  input:focus{
+  input:focus {
     outline: none;
   }
-  background-color: #11D4FB;
+  background-color: #11d4fb;
   height: 90px;
   padding: 0px 20px;
   position: fixed;
@@ -22,24 +22,23 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-   
   }
-  .nav__container_mobile{
-    background-color: #11D4FB;
+  .nav__container_mobile {
+    background-color: #11d4fb;
     width: 100vw;
     margin-left: -20px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
   }
- 
-  .nav__link_mobile{
+
+  .nav__link_mobile {
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 18px;
     height: 100%;
-    margin:  10px 20px;
+    margin: 10px 20px;
     span {
       cursor: pointer;
       color: white;
@@ -56,8 +55,8 @@
       margin-right: 20px;
       cursor: pointer;
     }
-    input{
-      width:200px;
+    input {
+      width: 200px;
       height: 30px;
       border-radius: 10px;
       border: none;
@@ -78,7 +77,7 @@
     justify-content: flex-end;
     color: #fff;
   }
-  .nav_menu_mobile{
+  .nav_menu_mobile {
     margin-right: 30px;
     display: flex;
     width: 80px;
@@ -108,7 +107,7 @@
       margin-right: 20px;
       cursor: pointer;
     }
-    input{
+    input {
       width: 400px;
       height: 30px;
       border-radius: 10px;
@@ -124,20 +123,20 @@
 }
 
 @media only screen and (max-width: 1050px) {
-  .navbar__container{
+  .navbar__container {
     .logo {
       margin-left: 0px;
     }
-    .nav__link{
-      display: none  !important;
+    .nav__link {
+      display: none !important;
     }
   }
 }
 @media only screen and (min-width: 1050px) {
-  .navbar__container{
-    .nav__link_mobile, .nav_menu_mobile{
+  .navbar__container {
+    .nav__link_mobile,
+    .nav_menu_mobile {
       display: none;
     }
-   
   }
 }
