--- a/edu/src/Sections/Promo/styles.scss
+++ b/edu/src/Sections/Promo/styles.scss
@@ -3,6 +3,28 @@
   width: 100%;
   justify-content: center;
   padding: 100px 0;
+  @media screen and (max-width: 1025px) {
+    flex-direction: column !important;
+    .app__container {
+      width: fit-content !important;
+      margin: 0 !important;
+      padding: 100px 60px !important;
+      z-index: 2;
+    }
+    .promo_img {
+      min-width: 100%;
+      // height: 600px;
+      margin: 0 !important;
+      z-index: 1;
+      object-fit: cover;
+    }
+  }
+  @media screen and (max-width: 550px) {
+    .app__container {
+      padding: 80px 40px !important;
+    }
+  }
+
   .promo_img {
     width: 650px;
     height: 600px;
@@ -12,12 +34,30 @@
 
   .app__container {
     width: 550px;
-    height: 400px;
+    min-height: 400px;
     background-color: #f4f4f4;
     margin-top: 80px;
     padding: 100px 50px;
     z-index: 2;
     margin-left: -270px;
+    @media screen and (max-width: 475px) {
+      h1 {
+        font-size: 28px;
+      }
+      h3 {
+        font-size: 16px;
+      }
+    }
+    @media screen and (max-width: 330px) {
+      padding: 60px 20px !important;
+      h1 {
+        font-size: 22px;
+      }
+      h3 {
+        font-size: 12px;
+      }
+    }
+
     h3 {
       color: rgb(17, 212, 251);
     }
@@ -28,6 +68,12 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
+      @media screen and (max-width: 475px) {
+        flex-direction: column;
+        .feature {
+          width: 100% !important;
+        }
+      }
       .feature {
         display: flex;
         align-items: center;
@@ -77,6 +123,21 @@
           padding-top: 3px;
         }
       }
+    }
+
+    @media screen and (max-width: 550px) {
+      flex-direction: column;
+      .apple,
+      .google {
+        min-width: 180px;
+      }
+    }
+  }
+  @media screen and (max-width: 300px) {
+    flex-direction: column;
+    .apple,
+    .google {
+      min-width: 150px !important;
     }
   }
 }
