--- a/edu/src/Sections/WhereToLearn/styles.scss
+++ b/edu/src/Sections/WhereToLearn/styles.scss
@@ -9,7 +9,6 @@
   max-width: 100vw;
   .learn__images__container {
     position: relative;
-
     .learn__images {
       position: absolute;
       &:first-child {
@@ -17,7 +16,7 @@
         height: 300px;
         // left: 300px;
         right: -500px;
-        top: -270px
+        top: -270px;
       }
       &:nth-child(2) {
         width: 310px;
@@ -31,7 +30,7 @@
         width: 480px;
         // left: 220px;
         right: -550px;
-        top:70px;
+        top: 70px;
         z-index: 3;
       }
     }
@@ -70,6 +69,10 @@
         .learn_text {
           width: 70%;
         }
+        @media screen and (max-width: 1025px) {
+          align-items: center;
+          gap: 30px;
+        }
       }
     }
     .learn__contact_btn {
@@ -88,10 +91,31 @@
         transition: all ease 0.3s;
       }
     }
+    @media screen and (max-width: 1025px) {
+      min-width: 70% !important;
+    }
+    @media screen and (max-width: 1025px) {
+      width: 70% !important;
+    }
+    @media screen and (max-width: 650px) {
+      min-width: 90% !important;
+      padding: 25px !important;
+    }
   }
-}
-
-@media screen and (max-width: 1340px) {
-  .learn__images {
+  @media screen and (max-width: 1025px) {
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    .learn__images__container {
+      display: none;
+    }
+    .learn__about {
+      width: 70% !important;
+    }
+  }
+  @media screen and (max-width: 650px) {
+    .learn__about {
+      width: 100% !important;
+    }
   }
 }
