--- a/edu/src/Sections/WhereToLearn/styles.scss
+++ b/edu/src/Sections/WhereToLearn/styles.scss
@@ -38,7 +38,7 @@
   .learn__about {
     max-width: 45vw;
     padding: 80px;
-
+    overflow: hidden;
     .learn_img {
       width: 50px;
       height: 50px;
@@ -68,14 +68,31 @@
         padding: 10px 0;
         .learn_text {
           width: 70%;
+          @media screen and (max-width: 300px) {
+            font-size: 12px !important;
+          }
         }
         @media screen and (max-width: 1025px) {
           align-items: center;
           gap: 30px;
         }
+        @media screen and (max-width: 400px) {
+          align-items: center;
+          gap: 15px;
+        }
       }
     }
     .learn__contact_btn {
+      @media screen and (max-width: 650px) {
+        width: 70%;
+        margin: 0 auto;
+        margin-top: 30px;
+      }
+      @media screen and (max-width: 650px) {
+        width: 50%;
+        margin: 0 auto;
+        margin-top: 30px;
+      }
       width: 130px;
       padding: 16px 30px;
       font-size: 18px;
@@ -92,7 +109,7 @@
       }
     }
     @media screen and (max-width: 1025px) {
-      min-width: 70% !important;
+      min-width: 85% !important;
     }
     @media screen and (max-width: 1025px) {
       width: 70% !important;
@@ -100,6 +117,19 @@
     @media screen and (max-width: 650px) {
       min-width: 90% !important;
       padding: 25px !important;
+      padding-right: 0 !important;
+    }
+    @media screen and (max-width: 300px) {
+      min-width: 100% !important;
+      padding: 10px !important;
+    }
+    @media screen and (max-width: 400px) {
+      h1 {
+        font-size: 28px !important;
+      }
+      p {
+        width: 94%;
+      }
     }
   }
   @media screen and (max-width: 1025px) {
@@ -109,13 +139,18 @@
     .learn__images__container {
       display: none;
     }
-    .learn__about {
-      width: 70% !important;
-    }
   }
   @media screen and (max-width: 650px) {
     .learn__about {
-      width: 100% !important;
+      max-width: 100% !important;
+      overflow: hidden !important;
+    }
+  }
+  @media screen and (max-width: 300px) {
+    .learn__about {
+      p {
+        font-size: 14px;
+      }
     }
   }
 }
